fix: pwsh profile 仅在 Windows 上出现。

--- a/readonly_Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
+++ b/readonly_Documents/PowerShell/Microsoft.PowerShell_profile.ps1.tmpl
@@ -1,3 +1,4 @@
+{{ if eq .chezmoi.os "windows" }}
 using namespace System.Management.Automation
 using namespace System.Management.Automation.Language
 
@@ -1897,3 +1898,4 @@ filter __sing-box_escapeStringWithSpecialChars {
 }
 
 Register-ArgumentCompleter -CommandName 'sing-box' -ScriptBlock ${__sing_boxCompleterBlock}
+{{ end }}
