suse only profile & rc

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -1,3 +1,11 @@
+{{- if eq .chezmoi.os "darwin" }}
+# macOS-specific code
+{{- else if eq .chezmoi.os "linux" }}
+{{-   if eq .chezmoi.osRelease.id "debian" }}
+# Debian-specific code
+{{-   else if eq .chezmoi.osRelease.id "fedora" }}
+# Fedora-specific code
+{{-   else if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }}
 # Sample .bashrc for SUSE Linux
 # Copyright (c) SUSE Software Solutions Germany GmbH
 
@@ -24,6 +32,8 @@ alias edit="~/bin/edit"
 # export NPM_CONFIG_REGISTRY="https://registry.npmmirror.com"
 # export RUSTUP_UPDATE_ROOT=https://mirrors.tuna.tsinghua.edu.cn/rustup/rustup
 # export RUSTUP_DIST_SERVER=https://mirrors.tuna.tsinghua.edu.cn/rustup
+export RUSTUP_DIST_SERVER="https://rsproxy.cn"
+export RUSTUP_UPDATE_ROOT="https://rsproxy.cn/rustup"
 export PATH="${PATH}:/home/hash/.cargo/bin"
 # export AR=llvm-ar
 export CC=clang
@@ -32,7 +42,7 @@ export CXX=clang++
 # export LD_PRELOAD=/usr/lib64/libmimalloc.so.2
 export ZYPP_PCK_PRELOAD=1
 export ZYPP_CURL2=1
-eval "$(fastly --completion-script-bash)"
+# eval "$(fastly --completion-script-bash)"
 # . "/home/hash/.acme.sh/acme.sh.env"
 # https://gist.github.com/skarllot/2648493
 if [[ ${EUID} == 0 ]] ; then
@@ -46,3 +56,5 @@ source /usr/share/fzf/shell/completion.bash
 # https://web.archive.org/web/20090815205011/http://www.cuberick.com/2008/11/update-bash-history-in-realtime.html
 shopt -s histappend
 PROMPT_COMMAND="history -a;$PROMPT_COMMAND"
+{{-   end }}
+{{- end }}
