--- a/dot_profile.tmpl
+++ b/dot_profile.tmpl
@@ -1,3 +1,11 @@
+{{- if eq .chezmoi.os "darwin" }}
+# macOS-specific code
+{{- else if eq .chezmoi.os "linux" }}
+{{-   if eq .chezmoi.osRelease.id "debian" }}
+# Debian-specific code
+{{-   else if eq .chezmoi.osRelease.id "fedora" }}
+# Fedora-specific code
+{{-   else if eq .chezmoi.osRelease.id "opensuse-tumbleweed" }}
 # Sample .profile for SUSE Linux
 # rewritten by Christian Steinruecken <cstein@suse.de>
 #
@@ -27,4 +35,5 @@ if [ -x /usr/bin/fortune ] ; then
     fortune -e chinese tang300 song100
 #    echo
 fi
-
+{{-   end }}
+{{- end }}
