--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -18,11 +18,11 @@
 # here, since multilingual X sessions would not work properly if LANG is over-
 # ridden in every subshell.
 
-{{     if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
+{{-     if (.chezmoi.kernel.osrelease | lower | contains "microsoft") }}
 # WSL-specific code
 # I believe it's safe...?
 export LANG=zh_CN.UTF-8
-{{     end }}
+{{-     end }}
 
 test -s ~/.alias && . ~/.alias || true
 
