--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -7,7 +7,7 @@
 	name = Master-Hash
 	signingkey = 2BB7465B2DC210E2
 [init]
-	defaultBranch = main
+	defaultBranch = principale
 [core]
 	autocrlf = input
 	safecrlf = warn
